--- a/plugins/okta/requirements.txt
+++ b/plugins/okta/requirements.txt
@@ -3,3 +3,4 @@
 # See: https://pip.pypa.io/en/stable/user_guide/#requirements-files
 validators==0.20.0
 parameterized==0.8.1
+timeout-decorator==0.5.0
