Updated plugin with parameterized on test cases

--- a/plugins/armorblox/plugin.spec.yaml
+++ b/plugins/armorblox/plugin.spec.yaml
@@ -82,7 +82,7 @@ types:
       type: '[]string'
       required: false
     title:
-      title: Subject
+      title: Title
       description: Mail subject
       type: 'string'
       required: false          
