Add examples plugin.spec.yaml

--- a/plugins/fortinet_fortigate/plugin.spec.yaml
+++ b/plugins/fortinet_fortigate/plugin.spec.yaml
@@ -882,11 +882,13 @@ actions:
         description: A list of address objects
         type: '[]address_object'
         required: true
+        example: [ { "name": "FABRIC_DEVICE", "q_origin_key": "FABRIC_DEVICE", "uuid": "7773d538-25a0-51ea-fcb2-a2340d71f5d9", "subnet": "0.0.0.0 0.0.0.0", "type": "ipmask", "sub-type": "sdn", "clearpass-spt": "unknown", "start-mac": "00:00:00:00:00:00", "end-mac": "00:00:00:00:00:00", "cache-ttl": 0, "fsso-group": [], "comment": "IPv4 addresses of Fabric Devices.", "visibility": "enable", "color": 0, "sdn-addr-type": "private", "list": [], "tagging": [], "allow-routing": "disable" } ]
       ipv6_address_objects:
         title: IPv6 Address Objects
         description: A list of IPv6 address objects
         type: '[]ipv6_address_object'
         required: true
+        example: [ { "name": "FABRIC_DEVICE", "q_origin_key": "FABRIC_DEVICE", "uuid": "7773d538-25a0-51ea-fcb2-a2340d71f5d9", "subnet": "0.0.0.0 0.0.0.0", "type": "ipmask", "sub-type": "sdn", "clearpass-spt": "unknown", "start-mac": "00:00:00:00:00:00", "end-mac": "00:00:00:00:00:00", "cache-ttl": 0, "fsso-group": [], "comment": "IPv4 addresses of Fabric Devices.", "visibility": "enable", "color": 0, "sdn-addr-type": "private", "list": [], "tagging": [], "allow-routing": "disable" } ]
   create_address_object:
     title: Create Address Object
     description: Create an address object
@@ -926,11 +928,13 @@ actions:
         description: Boolean value indicating the success of the operation
         type: boolean
         required: true
+        example: true
       response_object:
         title: Response Object
         description: Information about the operation that was performed
         type: object
         required: true
+        example: true
   delete_address_object:
     title: Delete Address Object
     description: Delete an address object
