--- a/plugins/fortinet_fortigate/plugin.spec.yaml
+++ b/plugins/fortinet_fortigate/plugin.spec.yaml
@@ -4,8 +4,8 @@ products: [insightconnect]
 name: fortinet_fortigate
 title: Fortinet FortiGate
 description: FortiGate Next Generation Firewalls (NGFWs) enable security-driven networking and consolidate industry-leading security capabilities such as intrusion prevention system (IPS), web filtering, secure sockets layer (SSL) inspection, and automated threat protection
-version: 6.0.0
-supported_versions: ["6.2.3"]
+version: 6.0.1
+supported_versions: ["7.2.4"]
 vendor: rapid7
 support: community
 status: []
@@ -824,11 +824,13 @@ actions:
         description: Was address found in group
         type: boolean
         required: true
+        example: true
       address_objects:
         title: Address Objects
         description: The names of the address objects that match or contain the address
         type: "[]string"
         required: true
+        example: ["198.51.100.100/32"]
   get_policies:
     title: Get Policies
     description: Get policies
@@ -845,6 +847,7 @@ actions:
         description: Policies
         type: "[]policies"
         required: false
+        example: [ { "policyid": 1, "q_origin_key": 1, "name": "Test Policy", "uuid": "6193559a-6862-51ea-44ce-e27594b8536a", "srcintf": [ { "name": "port1", "q_origin_key": "port1" } ], "dstintf": [ { "name": "port1", "q_origin_key": "port1" } ], "srcaddr": [ { "name": "Test Group", "q_origin_key": "Test Group" } ], "dstaddr": [ { "name": "Test Group", "q_origin_key": "Test Group" } ], "internet-service": "disable", "internet-service-id": [], "internet-service-group": [], "internet-service-custom": [], "internet-service-custom-group": [], "internet-service-src": "disable", "internet-service-src-id": [], "internet-service-src-group": [], "internet-service-src-custom": [], "internet-service-src-custom-group": [], "reputation-minimum": 0, "reputation-direction": "destination", "rtp-nat": "disable", "rtp-addr": [], "action": "accept", "send-deny-packet": "disable", "firewall-session-dirty": "check-all", "status": "enable", "schedule": "always", "schedule-timeout": "disable", "service": [ { "name": "ALL", "q_origin_key": "ALL" } ], "tos": "0x00", "tos-mask": "0x00", "tos-negate": "disable", "anti-replay": "enable", "tcp-session-without-syn": "disable", "geoip-anycast": "disable", "utm-status": "disable", "inspection-mode": "flow", "http-policy-redirect": "disable", "ssh-policy-redirect": "disable", "profile-type": "single", "profile-protocol-options": "default", "ssl-ssh-profile": "no-inspection", "logtraffic": "utm", "logtraffic-start": "disable", "capture-packet": "disable", "auto-asic-offload": "enable", "wanopt": "disable", "wanopt-detection": "active", "wanopt-passive-opt": "default", "webcache": "disable", "webcache-https": "disable", "application": [], "app-category": [], "url-category": [], "app-group": [], "nat": "enable", "permit-any-host": "disable", "permit-stun-host": "disable", "fixedport": "disable", "ippool": "disable", "poolname": [], "session-ttl": "0", "vlan-cos-fwd": 255, "vlan-cos-rev": 255, "inbound": "disable", "outbound": "enable", "natinbound": "disable", "natoutbound": "disable", "wccp": "disable", "ntlm": "disable", "ntlm-guest": "disable", "ntlm-enabled-browsers": [], "fsso": "enable", "wsso": "enable", "rsso": "disable", "groups": [], "users": [], "fsso-groups": [], "auth-path": "disable", "disclaimer": "disable", "email-collect": "disable", "natip": "0.0.0.0 0.0.0.0", "match-vip": "disable", "match-vip-only": "disable", "diffserv-forward": "disable", "diffserv-reverse": "disable", "diffservcode-forward": "000000", "diffservcode-rev": "000000", "tcp-mss-sender": 0, "tcp-mss-receiver": 0, "block-notification": "disable", "custom-log-fields": [], "srcaddr-negate": "disable", "dstaddr-negate": "disable", "service-negate": "disable", "internet-service-negate": "disable", "internet-service-src-negate": "disable", "timeout-send-rst": "disable", "captive-portal-exempt": "disable", "ssl-mirror": "disable", "ssl-mirror-intf": [], "dsri": "disable", "radius-mac-auth-bypass": "disable", "delay-tcp-npu-session": "disable" } ]
   get_address_objects:
     title: Get Address Objects
     description: Get address objects
@@ -879,11 +882,13 @@ actions:
         description: A list of address objects
         type: '[]address_object'
         required: true
+        example: '[ { "name": "FABRIC_DEVICE", "q_origin_key": "FABRIC_DEVICE", "uuid": "7773d538-25a0-51ea-fcb2-a2340d71f5d9", "subnet": "0.0.0.0 0.0.0.0", "type": "ipmask", "sub-type": "sdn", "clearpass-spt": "unknown", "start-mac": "00:00:00:00:00:00", "end-mac": "00:00:00:00:00:00", "cache-ttl": 0, "fsso-group": [], "comment": "IPv4 addresses of Fabric Devices.", "visibility": "enable", "color": 0, "sdn-addr-type": "private", "list": [], "tagging": [], "allow-routing": "disable" } ]'
       ipv6_address_objects:
         title: IPv6 Address Objects
         description: A list of IPv6 address objects
         type: '[]ipv6_address_object'
         required: true
+        example: '[ { "name": "FABRIC_DEVICE", "q_origin_key": "FABRIC_DEVICE", "uuid": "7773d538-25a0-51ea-fcb2-a2340d71f5d9", "subnet": "0.0.0.0 0.0.0.0", "type": "ipmask", "sub-type": "sdn", "clearpass-spt": "unknown", "start-mac": "00:00:00:00:00:00", "end-mac": "00:00:00:00:00:00", "cache-ttl": 0, "fsso-group": [], "comment": "IPv4 addresses of Fabric Devices.", "visibility": "enable", "color": 0, "sdn-addr-type": "private", "list": [], "tagging": [], "allow-routing": "disable" } ]'
   create_address_object:
     title: Create Address Object
     description: Create an address object
@@ -923,11 +928,13 @@ actions:
         description: Boolean value indicating the success of the operation
         type: boolean
         required: true
+        example: true
       response_object:
         title: Response Object
         description: Information about the operation that was performed
         type: object
         required: true
+        example: "{}"
   delete_address_object:
     title: Delete Address Object
     description: Delete an address object
@@ -944,11 +951,13 @@ actions:
         description: Boolean value indicating the success of the operation
         type: boolean
         required: true
+        example: true
       response_object:
         title: Response Object
         description: Information about the operation that was performed
         type: object
         required: true
+        example: "{}"
   add_address_object_to_address_group:
     title: Add Address Object to Group
     description: Add an address object to an address group
@@ -977,11 +986,13 @@ actions:
         description: Was the operation successful
         type: boolean
         required: true
+        example: true
       result_object:
         title: Result Object
         description: An object containing the results of the action
         type: object
         required: true
+        example: "{}"
   remove_address_object_from_group:
     title: Remove Address Object from Group
     description: Removes an address object from an address group
@@ -1010,8 +1021,10 @@ actions:
         description: Was the operation successful
         type: boolean
         required: true
+        example: true
       result_object:
         title: Result Object
         description: An object containing the results of the action
         type: object
         required: true
+        example: "{}"
